[tool.poetry]
name = "routor"
version = "0.5.1"
description = "Simple osm routing engine."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/escaped/routor/blob/master/README.md"
homepage = "https://github.com/escaped/routor"
repository = "https://github.com/escaped/routor"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

include = ["routor/py.typed"]
packages = [
  { include = "routor" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"

click = "^7.1.2"
fastapi = "^0.63.0"
more-itertools = "^8.6.0"
networkx = "^2.5"
networkx-astar-path = "^1.0.1"
osmnx = "^0.16.2"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"
uvicorn = "^0.13.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
better-exceptions = "^0.3.2"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
isort = "^5.5.2"
mypy = "^0.800"
pdbpp = "^0.10.2"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.3.1"
tox = "^3.20.0"
tox-gh-actions = "^1.3.0"

pytest-recording = "^0.11.0"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
routor = 'routor.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

