[tool.poetry]
name = "routor"
version = "0.7.1"
description = "Simple osm routing engine."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/escaped/routor/blob/master/README.md"
homepage = "https://github.com/escaped/routor"
repository = "https://github.com/escaped/routor"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

include = ["routor/py.typed"]
packages = [
  { include = "routor" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"

click = "*"
fastapi = "*"
more-itertools = ">8.0.0"
networkx = ">2.5"
networkx-astar-path = ">=1.0.1"
osmnx = ">1.1.0"
pydantic = ">1.5.0"
python-dotenv = ">0.15.0"
uvicorn = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
better-exceptions = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
isort = "*"
mypy = "*"
pdbpp = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-dotenv = "*"
pytest-mock = "*"
tox = "*"
tox-gh-actions = "*"

pytest-recording = "*"
typing-extensions = "*"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
routor = 'routor.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

